[package]
name = "color-backtrace"
version = "0.3.0"
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/athre0z/color-backtrace"
description = "Colorful panic backtraces"
readme = "README.md"

keywords = [
    "backtrace",
    "color",
    "colour",
    "stacktrace",
    "pretty",
]

[[example]]
name = "failure"
required-features = ["failure-bt"]

[features]
default = ["gimli-symbolize"]
failure-bt = ["failure"]
gimli-symbolize = ["backtrace/gimli-symbolize"]

[dependencies]
failure = { version = "0.1.7", optional = true }
backtrace = "0.3.46"
msgbox = "0.4.0"
